--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <html> 
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, inital-scale=1">
 <title> First Web Page</title>
 </head>
 <body>
-  <p><h1> Dooz</h1></p>
+  <p><h1><u> What am I doing you might ask? </u></h1></p>
+  <p><h3> Basically I got really bored so I decided to take a stab at learning HTML for the 50th time.</h3></p>
+  <p><h4> Who knows? Might lead somewhere this time </h4></p>
 </body>
 </html>  
