--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, inital-scale=1">
-<title> First Web Page</title>
+<title>Jason wanted to do learn coding.</title>
 </head>
 <body>
-  <p><h1><u> What am I doing you might ask? </u></h1></p>
-  <p><h3> Basically I got really bored so I decided to take a stab at learning HTML for the 50th time.</h3></p>
-  <p><h4> Who knows? Might lead somewhere this time </h4></p>
+ <h1><b>Want to see something cool?</b></h1>
+ <p><h3>Where do you spend most of your time?</h3>
+  <h3><a href="https://www.ascotsigns.com/"> I'll show you.</a></h3>
+ </p> 
 </body>
 </html>  
